welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:11: error: ';' expected but '<-' found.
    a <- a%10;
      ^