welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
  if ( chiffre(a) == chiffre(b) ){
    return true;
  } else {
    return false;
  }
}
  
def chiffre(a:Int): Int ={
  while( a%10 != 10){
    a <- a%10;
  }
  return a;
}